--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@fontsource/poppins": "^5.2.6",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
+    "@react-three/drei": "^10.0.8",
+    "@react-three/fiber": "^9.1.2",
     "@tailwindcss/postcss": "^4.1.5",
     "framer-motion": "^12.10.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.0"
+    "react-intersection-observer": "^9.16.0",
+    "react-router-dom": "^7.6.0",
+    "three": "^0.176.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
